# changelog-checker

./: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  LICENSE  README.md  action.yml
.github/workflows/: build.yml  changelog-checker.yml  docker-publish.yml
src/: args.rs  checker.rs  main.rs
