[package]
name = "changelog-checker"
version = "1.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
colored = "2.2.0"
lexopt = "0.3.0"
reqwest = { version = "0.12.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
