[package]
name = "changelog-checker"
version = "1.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
colored = "3.0.0"
lexopt = "0.3.1"
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0.226", features = ["derive"] }
